kubernetes/test/app-test-ingress-FastAPI.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exoplanet-test-fastapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: christinegoh.coe332.tacc.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exoplanet-test-fastapi-service
                port:
                  number: 8000
