kubernetes/test/app-test-service-FastAPI.yml
---
apiVersion: v1
kind: Service
metadata:
  name: exoplanet-test-fastapi-service
spec:
  type: ClusterIP
  selector:
    app: exoplanet-test-fastapi
  ports:
    - name: http
      port: 8000
      targetPort: 8000
