kubernetes/test/app-test-service-nodeport-FastAPI.yml
---
apiVersion: v1
kind: Service
metadata:
  name: exoplanet-test-fastapi-nodeport-service
spec:
  type: NodePort
  selector:
    app: exoplanet-test-fastapi
  ports:
    - name: http
      port: 8000
      targetPort: 8000
