kubernetes/test/app-test-service-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: exoplanet-test-redis-service
spec:
  type: ClusterIP
  selector:
    app: exoplanet-test-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
